Adicionando as metastegs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Banco Neon</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>Redesign landing page banco Neon</title>
+  <meta name="title" content="Redesign landing page banco Neon">
+  <meta name="description" content="A conta digital certa pra cuidar bem do seu dinheiro">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://neon-landingpage-curso.netlify.app/">
+  <meta property="og:title" content="Redesign landing page banco Neon">
+  <meta property="og:description" content="A conta digital certa pra cuidar bem do seu dinheiro">
+  <meta property="og:image" content="https://neon-landingpage-curso.netlify.app/share-img.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://neon-landingpage-curso.netlify.app/">
+  <meta property="twitter:title" content="Redesign landing page banco Neon">
+  <meta property="twitter:description" content="A conta digital certa pra cuidar bem do seu dinheiro">
+  <meta property="twitter:image" content="https://neon-landingpage-curso.netlify.app/share-img.jpg">
 </head>
 <body>
   <header>
